--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="container box" id="dataviz1">
                 <canvas id="chart1">
                 </canvas>
-                <p class="mt-2 mb-2">* Production d'énergie mesurée enterawatts-heures</p>
+                <p class="mt-2 mb-2">* Production d'énergie mesurée en terawatts-heures</p>
                 <p>Sources : 
                     <a href="https://ourworldindata.org/grapher/nuclear-energy-generation?tab=chart&country=~OWID_WRL">Nuclear power generation - Our World in Data</a>
                     <a href="https://ourworldindata.org/grapher/modern-renewable-energy-consumption">Renewable electricity generation - Our World in Data </a>
@@ -137,6 +137,10 @@
                         </select>
                     </div>
                 </div>
+            </div>
+            <h2 class="title is-2 mt-6">Émissions de gaz à effet de serre par sources d'énergies</h2>
+            <div class="container box is-3">
+                <img src="img/postermockup.jpg" alt="Poster comparant les émissions de gaz à effet de serre par sources d'énergies">
             </div>
         </div>
         <div class="column"></div>
