--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                     d'électricité</a>
                 <a href="#dataviz2" class="button is-light">Sûreté et
                     propreté</a>
-                <a href="#poster" class="button is-light">Poster
-                    Datalogy</a>
+                <a href="#poster" class="button is-light">Émissions de GES</a>
             </div>
         </nav>
     </header>
@@ -139,7 +138,7 @@
                 </div>
             </div>
             <h2 class="title is-2 mt-6">Émissions de gaz à effet de serre par sources d'énergies</h2>
-            <div class="container box is-3">
+            <div class="container is-3" id="poster">
                 <img src="img/postermockup.jpg" alt="Poster comparant les émissions de gaz à effet de serre par sources d'énergies">
             </div>
         </div>
