--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <h2 class="title is-2 mt-6">Émissions de gaz à effet de serre par sources d'énergies</h2>
             <div class="container is-3" id="poster">
-                <img src="img/postermockup.jpg" alt="Poster comparant les émissions de gaz à effet de serre par sources d'énergies">
+                <img src="img/postermockup.jpg" class="posterimg" alt="Poster comparant les émissions de gaz à effet de serre par sources d'énergies">
             </div>
         </div>
         <div class="column"></div>
