--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Datalogy</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
@@ -16,8 +16,8 @@
     <header class="mb-6">
         <nav class="navbar has-background-light p-3">
             <div class="navbar-brand">
-                <span class="icon">
-                    <i class></i>
+                <span class="icon is-large">
+                    <i class="fas fa-atom fa-2x"></i>
                 </span>
             </div>
             <div class="navbar-end">
